# prometheos

./: .gitmodules  GNUmakefile  limine.conf
kernel/: .gitignore  Cargo.toml
kernel/.cargo/: config.toml
kernel/src/: apic.rs  gdt.rs  idt.rs  isr.S  main.rs  pci.rs  serial.rs  tsc.rs  utils.rs
kernel/src/acpi/: mod.rs  uacpi.rs
kernel/src/mm/: heap.rs  mod.rs  pmm.rs  vmm.rs
