[package]
name = "prometheos"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 1
lto = "thin"
panic = "abort"

[profile.release]
opt-level = 3
codegen-units = 1
strip = true
lto = "fat"
panic = "abort"

[dependencies]
limine = "0.6.5"
lock_api = "0.4.14"
uacpi-sys = { path = "../bindings/uacpi-sys" }
x86 = "0.52.0"
